--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="drawer_open">Drawer opened</string>
     <string name="drawer_close">Drawer Closed</string>
+    <string-array name="tabs">
+        <item name="tab1">Tab 1</item>
+        <item name="tab2">Tab 2</item>
+        <item name="tab3">Tab 3</item>
+
+    </string-array>
+    <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
+    <string name="action_tabs_using_library">Actiontab with Library</string>
 </resources>
