--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
     <string name="action_tabs_using_library">Actiontab with Library</string>
     <string name="title_activity_vector_test">VectorTestActivity</string>
+    <string name="vectoView">vector_view</string>
 </resources>
