--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,17 +5,17 @@
     <string name="action_settings">Settings</string>
     <string name="next">next</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="drawer_open">Drawer opened</string>
     <string name="drawer_close">Drawer Closed</string>
-    <string-array name="tabs">
-        <item name="tab1">Home</item>
-        <item name="tab2">Upcoming</item>
+    <string-array name="tabs_names">
+        <item name="tab1">Upcoming</item>
+        <item name="tab2">Popular</item>
         <item name="tab3">Search</item>
 
     </string-array>
-    <string name="title_activity_activity_using_tab_library">ActivityUsingTabLibrary</string>
+    <string name="title_activity_activity_using_tab_library">Movies</string>
     <string name="action_tabs_using_library">Actiontab with Library</string>
     <string name="title_activity_vector_test">VectorTestActivity</string>
     <string name="vectoView">vector_view</string>
